--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">NestNet</string>
     <string name="package_name">com.saurabhkumarbusiness.societymanagement</string>
     <string name="custom_url_scheme">com.saurabhkumarbusiness.societymanagement</string>
+    <string name="default_notification_channel_id">high_priority_channel</string>
 </resources>
